Remove quotes from env example

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-# BROWSER_HEADLESS="false" # Optional
+# BROWSER_HEADLESS=false # Optional
+
+# NOTE: Store the variables without quotes around it. Seems to be an issue where the quotes is added to the variable.
 
 # Altibox
-ALTIBOX_USERNAME="<your_altibox_username>"
-ALTIBOX_PASSWORD="<your_altibox_password>"
-# ALTIBOX_LOGIN_URL="http://localhost:3000/minesider/login" # Optional
-# ALTIBOX_INVOICE_URL="http://localhost:3000/minesider/konto/faktura" # Optional
+ALTIBOX_USERNAME=<your_altibox_username>
+ALTIBOX_PASSWORD=<your_altibox_password>
+# ALTIBOX_LOGIN_URL=http://localhost:3000/minesider/login # Optional
+# ALTIBOX_INVOICE_URL=http://localhost:3000/minesider/konto/faktura # Optional
 
 # Visma
-VISMA_EMAIL="<insert email in visma>"
+VISMA_EMAIL=<insert email in visma>
 
 # Resend
 RESEND_API_KEY="<insert api key>"
