Send optional status messages to discord

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ RESEND_EMAIL_FROM="<insert email from>" # Example format: "Acme <onboarding@rese
 
 # Download directory
 # DOWNLOAD_DIR=./downloads # Optional
+
+# Discord Webhook
+# DISCORD_WEBHOOK_URL=<webhook url> # Optional
